# BeztaMy_Project

./: .gitignore  README.md  Readme.md  backlog.md
Backend/finance-assistant/: CLAUDE.md  pom.xml  readme.md
Frontend/: GEMINI.md  README.md  analysis.txt  analysis_result.txt  drive_log.txt  final_log.txt  find_coordinates.py  plan_tts_stt.md  pubspec.yaml  success_log.txt  test_e2e_pyautogui.py
Frontend/android/: build_log.txt  build_log_2.txt
Frontend/integration_test/: app_test.dart
Frontend/lib/: dashboard_screen.dart  main.dart
Frontend/linux/: CMakeLists.txt
Frontend/web/: index.html  manifest.json
Selenium_testing/: pom.xml  update_port.bat
simpleRag/: .env.example  .gitignore  INTEGRATION_GUIDE.md  README.md  backend_client.py  backlog.md  index_data.py  main.py  pyproject.toml  rag.ipynb  rag.md  test_api.py  test_rag.py  tools.py
simpleRag/app/: auth.py  config.py  tools.py
simpleRag/app/services/: intent_config.py  rag_service.py
simpleRag/chroma_db_dir/: chroma.sqlite3
simpleRag/data/: 01_budgeting_and_tracking.md  02_saving_and_investing.md  03_debt_and_spending.md  budgeting_strategies.md  cash_flow_management.md  expense_categories_tracking.md  financial_health.md  income_optimization.md  investment_basics.md  smart_spending.md
simpleRag/evaluation_ragas/: eval_rag_quality.py  sample_dataset.json
simpleRag/evaluation_ragas/results/: results_20251226_220945.csv  results_20251226_220945.json  results_20251226_222004.csv  results_20251226_222004.json  results_20251226_222311.csv  results_20251226_222311.json
(+132 files in other folders)
